--- a/Todo App/index.html
+++ b/Todo App/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="shortcut icon" href="./public/to-do-list.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/to-do-list.png" type="image/x-icon">
   <link rel="stylesheet" href="./src/reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
